--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     restart: unless-stopped
     environment:
       MYSQL_ROOT_PASSWORD: "fame1234"
-      MYSQL_DATABASE: "room_reservation"
+      MYSQL_DATABASE: "reservation_db"
       MYSQL_USER: "root"
       MYSQL_PASSWORD: "fame1234"
     ports:
