--- a/backend/package.json
+++ b/backend/package.json
@@ -23,8 +23,11 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "^11.0.0",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^11.0.0",
+    "bcryptjs": "^3.0.2",
     "mysql2": "^3.15.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
